# CS454_Game_Engine

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  game.cpp  game.h  gitignore.txt  main.cpp
Engine/: UserPath.h  game.cpp  paths.h  timing.cpp  timing.h
Engine/Include/: animation.h  input.h  physics.h  rendering.h  sound.h  sprite.h  terrain.h  timing.h
Engine/Src/: animation.cpp  input.cpp  physics.cpp  rendering.cpp  sound.cpp  sprite.cpp  terrain.cpp  timing.cpp
UnitTests/SuperMarioBros/Media/: SUPER_MARIO_TERRAIN.tmx  SUPER_MARIO_TERRAIN.tsx  marioapp.icns
UnitTests/SuperMarioBros/Media/Animation/death_animation/: death_animation.tmx
UnitTests/SuperMarioBros/Media/Animation/death_animation/Player/death_animation_luigi/: death_animation_luigi.csv
UnitTests/SuperMarioBros/Media/Animation/grow_animation/: grow_animation.tmx
UnitTests/SuperMarioBros/Media/Animation/grow_animation/Enemies/grow_animation_ red_koopa_troopa/: grow_animation_red_koopa_troopa.csv
UnitTests/SuperMarioBros/Media/Animation/grow_animation/Enemies/grow_animation_green_koopa_troopa/: grow_animation_green_koopa_troopa.csv
UnitTests/SuperMarioBros/Media/Animation/grow_animation/Player/grow_animation_fire_luigi/: grow_animation_fire_luigi.csv
UnitTests/SuperMarioBros/Media/Animation/grow_animation/Player/grow_animation_fire_mario/: grow_animation_fire_mario.csv
UnitTests/SuperMarioBros/Media/Animation/grow_animation/Player/grow_animation_luigi/: grow_animation_luigi.csv
UnitTests/SuperMarioBros/Media/Animation/grow_animation/Player/grow_animation_mario/: grow_animation_mario.csv
UnitTests/SuperMarioBros/Media/Animation/moving_animation/Enemies/goomba_moving_animation/: moving_animation_goomba.csv
UnitTests/SuperMarioBros/Media/Animation/moving_animation/Enemies/green_koopa_troopa_moving_animation/: moving_animation_green_koopa_troopa.csv
UnitTests/SuperMarioBros/Media/Animation/moving_animation/Enemies/red_koopa_troopa_moving_animation/: moving_animation_red_koopa_troopa.csv
UnitTests/SuperMarioBros/Media/Animation/moving_animation/Player/: TODO
UnitTests/SuperMarioBros/Media/Animation/moving_animation/Player/jump_animation/: jump_animation.tmx
UnitTests/SuperMarioBros/Media/Animation/moving_animation/Player/running_animation/: running_animation.tmx  runnning_animation1.tmx
UnitTests/SuperMarioBros/Media/Animation/shrink_animation/Enemies/: shrink_animation.tmx
UnitTests/SuperMarioBros/Media/Animation/shrink_animation/Player/: shrink_animation.tmx
UnitTests/SuperMarioBros/Media/Levels/1-1/: 1-1.tmx  1-1_Background.csv  1-1_Terrain.csv  BACKGROUND.csv  TERRAIN.csv  level1-1.json
UnitTests/UnitTest1/Media/: map2_Tile Layer 1.csv
UnitTests/ZeldaII/: ZeldaII.cpp  ZeldaII.h
UnitTests/ZeldaII/Media/: zelda2map_background.csv  zelda2map_objects.csv  zelda2map_terrain.csv
UnitTests/ZeldaII/Media/Levels/ParapaPalace/: parapa_palace_background.csv  parapa_palace_terrain.csv  sprites_Sprites.csv
UnitTests/ZeldaII/src/: ChatGPT - 454 Game Engine Assistant.html  Enemy.cpp  Enemy.h  ZeldaII.cpp  ZeldaII_Animation.cpp  ZeldaII_FunctionLibrary.cpp  ZeldaII_Initializations.cpp  ZeldaII_Input.cpp  ZeldaII_Physics.cpp  ZeldaII_Rendering.cpp  ZeldaII_Sound.cpp  ZeldaII_Sprites.cpp
(+131 files in other folders)
